<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

<TextView
    android:id="@+id/tvInput"
    android:layout_width="match_parent"
    android:layout_height="250dp"
    android:background="@color/light_grey"
    android:padding="10dp"
    android:textSize="48sp"
    android:text="@string/calc_text"
    android:gravity="end|bottom"
    />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
          android:orientation="horizontal"
        android:layout_weight="1"
        >
        <Button
            android:id="@+id/btnSeven"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:onClick="onDigit"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:text="@string/_7"
            />
        <Button
            android:id="@+id/btnEight"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:onClick="onDigit"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:text="@string/_8"
            />
        <Button
            android:id="@+id/btnNine"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:onClick="onDigit"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:text="@string/_9"
            />
        <Button
            android:id="@+id/btnDivide"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:onClick="onOperator"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:text="@string/divide"
            />



    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >
        <Button
            android:id="@+id/btnFour"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:onClick="onDigit"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:text="@string/_4"
            />
        <Button
            android:id="@+id/btnFive"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:onClick="onDigit"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:text="@string/_5"
            />
        <Button
            android:id="@+id/btnSix"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:onClick="onDigit"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:text="@string/_6"
            />
        <Button
            android:id="@+id/btnMultiply"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:onClick="onOperator"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:text="@string/multiply"
            />



    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >
        <Button
            android:id="@+id/btnOne"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:onClick="onDigit"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:text="@string/_1"
            />
        <Button
            android:id="@+id/btnTwo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:onClick="onDigit"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:text="@string/_2"
            />
        <Button
            android:id="@+id/btnThree"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:onClick="onDigit"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:text="@string/_3"
            />
        <Button
            android:id="@+id/btnMinus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:onClick="onOperator"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:text="@string/minus"
            />



    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >
        <Button
            android:id="@+id/btnDot"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:onClick="onDecimalPoint"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:text="@string/dot"
            />


        <Button
            android:id="@+id/btnZero"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:onClick="onDigit"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:text="@string/_0"
            />
        <Button
            android:id="@+id/btnClr"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:onClick="onClear"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:text="@string/clr"
            tools:ignore="UsingOnClickInXml"
            />
        <Button
            android:id="@+id/btnAdd"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:onClick="onOperator"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:text="@string/add"
            />



    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >
        <Button
            android:id="@+id/btnisEqualsto"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:onClick="onEqual"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:text="@string/isEqualsto"
            />

    </LinearLayout>

</LinearLayout>